--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -7,10 +7,11 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-sass": "^0.9.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "grunt-contrib-copy": "^0.8.2"
+    "jquery": "^2.2.0"
   }
 }
