Moved webapp directly in src/main/webapp/ directory. Compilation is now in-place

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ hs_err_pid*
 .classpath
 .project
 .settings*
+
+# Build artifacts
+.sass-cache/
+node_modules/
+
+src/main/webapp/css/
+**/*.dist.js
