Deactivated hbm2ddl generation and fixed schema construction.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -3,6 +3,10 @@ spring:
     show-sql: true # Show SQL generated with Spring data JPA
   profiles:
     active: dev # Activate spring dev profile
+  h2:
+    console: 
+      enabled: true
+      path: /console/
 server: 
   port: 8080
 logging:
