--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -5,6 +5,8 @@
   "author": "Benoit Averty <benoit@baverty.com>",
   "license": "MIT",
   "devDependencies": {
+    "angular": "^1.4.9",
+    "angular-route": "^1.4.9",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.7.0",
