--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -14,3 +14,9 @@ logging:
     org.hibernate: INFO
     org.springframework: INFO
     com.baverty: DEBUG
+security:
+  basic:
+    enabled: false
+management:
+  security: 
+    enabled: false
