Configured security to allow direct access to assets and GET /api/recipes endpoint. POST /api/recipes is secured.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -13,7 +13,7 @@ logging:
   level:
     org.hibernate: INFO
     org.springframework: INFO
-    com.baverty: DEBUG
+    com.mysmartfridge: DEBUG
 security:
   basic:
     enabled: false
