--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
+    "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.0"
   }
