--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "lodash": "^4.5.0"
   },
   "dependencies": {
     "angular-ui-router": "^0.2.18",
