Refactored domain objects, modeling of relationships between recipe and ingredients, parsing of ingredients from api to domain objects

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,6 +1,4 @@
 spring:
-  jpa:
-    show-sql: true # Show SQL generated with Spring data JPA
   profiles:
     active: dev # Activate spring dev profile
   h2:
@@ -11,7 +9,7 @@ server:
   port: 8080
 logging:
   level:
-    org.hibernate: INFO
+    org.hibernate: DEBUG
     org.springframework: INFO
     com.mysmartfridge: DEBUG
 security:
