--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.nitorcreations</groupId>
+			<artifactId>junit-runners</artifactId>
+			<version>1.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
