--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,10 +1,11 @@
 spring:
   profiles:
     active: dev # Activate spring dev profile
-  h2:
-    console: 
-      enabled: true
-      path: /console/
+  data:
+    mongodb:
+      database: mysmartfridge
+      host: localhost
+      port: 27017
 server: 
   port: 8080
 logging:
