--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -1,11 +1,18 @@
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.mongo.embedded.EmbeddedMongoAutoConfiguration
   profiles:
     active: prod
+  data:
+    mongodb:
+      database: mysmartfridge
+      host: localhost
+      port: 27017
 server:
   port: 8085
   address: 127.0.0.1 # Bind only to localhost in production to restrict access via apache frontend
 logging:
-  file: log/webcompiler.log # Log to file in prod environment.
+  file: log/mysmartfridge.log # Log to file in prod environment.
   level:
     org.hibernate: ERROR
     org.springframework: INFO
