--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<scope>test</scope>
 			<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>1.50.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
