--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "MySmartFridge",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-scripts": "0.4.1"
-  },
-  "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
-  },
+  "name": "my-smart-fridge",
+  "version": "1.0.0",
+  "description": "Food App",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nf start -p 3000"
   },
-  "eslintConfig": {
-    "extends": "./node_modules/react-scripts/config/eslint.js"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BenoitAverty/MySmartFridge.git"
+  },
+  "author": "Benoit Averty",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/BenoitAverty/MySmartFridge/issues"
+  },
+  "homepage": "https://github.com/BenoitAverty/MySmartFridge#readme"
 }
