--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "dependencies": {
     "npm-run-all": "^3.1.0"
   },
+  "devDependencies": {
+    "mkdirp": "^0.5.1",
+    "mongodb-prebuilt": "^5.0.6"
+  },
   "engines": {
     "node": "^6.5.0",
     "npm": "^3.10.3"
