--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "babel-node src/index.js",
     "build": "babel -d build src"
   },
@@ -18,6 +18,10 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0"
+    "babel-preset-es2015": "^6.14.0",
+    "jest": "^15.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
