--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-jest": "^15.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "jest": "^15.1.1"
